--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-ui": "^2.1.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.0",
+    "lrc-file-parser": "^1.0.5",
     "v-charts": "^1.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
