首页歌单查看完成，mv播放完成，页面重新布局，评论框完成。

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "better-scroll": "^2.0.2",
     "echarts": "^4.2.0-rc.2",
     "el-tree-transfer": "^2.2.9",
     "element-ui": "^2.1.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^2.2.0",
     "lrc-file-parser": "^1.0.5",
+    "lyric-parser": "^1.0.1",
     "v-charts": "^1.19.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
